*** empty log message ***

--- a/doc/src/manual/ch-ned-lang.tex
+++ b/doc/src/manual/ch-ned-lang.tex
@@ -736,7 +736,7 @@ You can connect two submodules or a submodule with its enclosing
 compound module. (For completeness, you can also connect two gates
 of the compound module on the inside, but this is rarely needed).
 This means that NED does not permit connections that span
-multiple levels of hieararchy -- this restriction
+multiple levels of hierarchy -- this restriction
 enforces compound modules to be self-contained, and thus promotes
 reusability. Gate directions must also be observed,
 that is, you cannot connect two output gates or two input gates.
@@ -1054,7 +1054,7 @@ The following units\index{time units} can be used:
 \hline
 \tabheadcol
 \tbf{Unit} & \tbf{Meaning} \\\hline
-\ttt{ns}   & nanoseconds) \\\hline
+\ttt{ns}   & nanoseconds \\\hline
 \ttt{us}   & microseconds \\\hline
 \ttt{ms}   & milliseconds \\\hline
 \ttt{s}    & seconds \\\hline
