*** empty log message ***

--- a/doc/src/manual/ch-ned-lang.tex
+++ b/doc/src/manual/ch-ned-lang.tex
@@ -1135,7 +1135,7 @@ Here's the complete list of operators, in order of decreasing precendence:
 %%
 \ttt{+}, \ttt{-}                 & add, subtract \\\hline
 %%
-\ttt{<<}, \ttt{>>}               & bitwise shifting \\\hline
+\ttt{<<}, \ttt{>>}               & bitwise shift \\\hline
 %%
 \ttt{\&}, \ttt{|}, \ttt{\#}      & bitwise and, or, xor \\\hline
 %%
