--- a/doc/src/manual/ch-neddoc.tex
+++ b/doc/src/manual/ch-neddoc.tex
@@ -330,7 +330,7 @@ Example:
 //
 \end{verbatim}
 
-You can create links to the generated pages in the normal HTML way,
+You can create links to the generated pages using standard HTML,
 using the \ttt{<a href="...">...</a>} tag. All HTML files are
 placed in a single directory, so you don't have to worry about
 specifying directories.
