--- a/doc/src/manual/ch-run-sim.tex
+++ b/doc/src/manual/ch-run-sim.tex
@@ -822,15 +822,15 @@ An example ini file:
 # omnetpp.ini
 
 \tbf{[Parameters]}
-token.num_stations = 3
-token.num_messages = 10000
+token.numStations = 3
+token.numMessages = 10000
 
 \tbf{[Run 1]}
-token.stations[*].wait_time = 10ms
+token.stations[*].waitTime = 10ms
 
 \tbf{[Run 2]}
-token.stations[0].wait_time = 5ms
-token.stations[*].wait_time = 1000ms
+token.stations[0].waitTime = 5ms
+token.stations[*].waitTime = 1000ms
 \end{Verbatim}
 
 
